# bisector

./: .gitignore  LICENSE  NOTES.md  NOTICE  Pipfile  README.md  check.sh  pyproject.toml  requirements.txt  run_system_test.sh  setup.py
.github/workflows/: run_tests.yaml
git_fuzzy_bisector/: git_fuzzy_bisect.py
git_fuzzy_bisector/core/: history_analysis.py  history_probability.py  math.py  search_problem.py  search_strategy.py
git_fuzzy_bisector/core/test/: history_analysis_test.py  history_probability_test.py  math_test.py  search_test.py
git_fuzzy_bisector/fixture/: fixture.py
src/: git-fuzzy-bisect  interface.py  search_problem.py  search_state.py
src/core/: history_probability.py  search_problem.py  search_strategy.py  structures.py
src/core/test/: history_probability_test.py  search_test.py
src/fixture/: fixture.py
